fix: quick open hightlight label whitespace

--- a/packages/quick-open/src/browser/styles.module.less
+++ b/packages/quick-open/src/browser/styles.module.less
@@ -155,6 +155,7 @@
   .label_icon_container {
     display: flex;
     align-items: center;
+    white-space: pre;
   }
 
   .input {
